cadastro signupe, armazenando fotos na pasta uploads

--- a/delivery/settings.toml
+++ b/delivery/settings.toml
@@ -10,6 +10,7 @@ EXTENSIONS = [
     "delivery.ext.cli:init_app",
     "delivery.ext.site:init_app"
 ]
+UPLOAD_FOLDER = "uploads"
 
 [development]
 DEBUG = true
